# affect-state-forecaster

./: .gitignore  README.md  idea.md  pyproject.toml  requirements.txt  workflow.md
configs/: research_hypotheses.json
docs/: cloud_server_setup.md  data_setup.md
experiments/html/: 20260319_143055_process_doc_smoke_v2.html  20260319_172516_ratio_sweep_ratio_30.html  20260319_172549_ratio_sweep_ratio_50.html  20260319_172622_ratio_sweep_ratio_70.html  20260319_172627_paper_progress.html  20260319_172746_cross_event_charliehebdo.html  20260319_172820_cross_event_ebola_essien.html  20260319_172854_cross_event_ferguson.html  README.md  (+63 more)
scripts/: analyze_experiment_progress.py  build_forecasting_benchmark.py  check_server_env.py  download_pheme.sh  generate_data_analysis_report.py  generate_failure_case_report.py  generate_model_architecture_diagrams.py  label_pheme_sentiment.py  organize_html_reports.py  prepare_pheme.py  run_affect_ablation_suite.py  run_capacity_matched_suite.py  run_cross_event_suite.py  run_experiment_suite.py  run_first_round_experiments.sh  run_fusion_capacity_control.py  run_fusion_diagnostic_suite.py  run_labeler_robustness_suite.py  run_main_plus_topconf_suite.py  run_ratio_sweep.py  run_seed_sweep.py  run_source_gate_validation.py  run_topconf_baseline_suite.py  setup_server_env.sh  sync_experiment_records.py  verify_pheme_layout.py
src/: evaluate.py  experiment_reporting.py  train.py
tests/: test_data_analysis_report.py  test_experiment_entrypoints.py  test_failure_case_report.py  test_generate_progress_html.py  test_html_organization.py
(+464 files in other folders)
