[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-event-affect-forecasting"
version = "0.1.0"
description = "Research codebase for forecasting future group sentiment trends from early-stage event threads."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
